# CSP

./: __azurite_db_blob__.json  __azurite_db_blob_extent__.json  main.py  pyproject.toml
example1/: app.yaml  main.py  requirement.txt
src/: variables.py
src/example1/: main.py
src/example2/: main.py
src/example2/templates/: main.html
src/example3/: main.py
src/example3/static/: firebase-login.js  styles.css
src/example3/templates/: main.html
